# flickpick

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/plans/: 2025-12-28-flickpick-design.md  2025-12-28-flickpick-implementation.md
flickpick/: __init__.py  cli.py  config.py  db.py  llm.py  recommender.py  tmdb.py
tests/: __init__.py  test_cli.py  test_config.py  test_db.py  test_llm.py  test_recommender.py  test_tmdb.py
