[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flickpick"
version = "0.1.0"
description = "CLI movie recommendation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "scikit-learn>=1.3.0",
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
flickpick = "flickpick.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
